[package]
name = "jog"
version = "0.1.0"
edition = "2021"
description = "Jog your memory before standup — Atlassian activity summary CLI"

[dependencies]
anyhow = "1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "5"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
urlencoding = "2"
